# erp_software

./: README.md  package-lock.json
backend/: .gitignore  pyproject.toml  sidebar.txt
backend/apps/accounts/: admin.py  models.py  serializers.py  views.py
backend/apps/branches/: admin.py  models.py
backend/apps/companies/: admin.py  models.py  serializers.py  views.py
backend/apps/crm/: admin.py  models.py  serializers.py  utils.py  views.py
backend/apps/employees/: admin.py  models.py  serializers.py  views.py
backend/apps/operations/: admin.py  models.py  serializers.py  views.py
backend/apps/operations/management/commands/: populate_sidebar.py  sidebar.txt
backend/apps/products/: admin.py  models.py  serializers.py
backend/apps/reports/: serializers.py  views.py
backend/apps/transactions/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
backend/apps/users/: admin.py  models.py  serializers.py  views.py
backend/apps/users/templates/users/: landing.html
backend/config/: .env.example  settings.py  urls.py
backend/templates/templated_email/: group_mail.email
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  test.json  vite.config.js
frontend/src/: App.css  App.jsx  Store.jsx  index.css  main.jsx
frontend/src/constants/: companyManagementRelated.jsx  employeeMngmentrelatesd.jsx
frontend/src/hooks/: useGetAllStaffTasks.jsx  useGetAllTaskforAdmin.jsx  useGetProjects.jsx  useGetTaskDetail.jsx
frontend/src/lib/: countries.js  fetchFileType.js  fetchPdf.js  formatDate.js  formatTaskDate.js  (+3 more)
(+198 files in other folders)
